<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation"
    app:startDestination="@id/categoryFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.clavis.HomeFragment.HomeFragment"
        android:label="Заведения"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_basketFragment"
            app:destination="@id/basketFragment" />
    </fragment>
    <fragment
        android:id="@+id/basketFragment"
        android:name="com.example.clavis.BasketFragment.BasketFragment"
        android:label="@string/basket"
        tools:layout="@layout/fragment_basket" >
        <action
            android:id="@+id/action_basketFragment_to_homeFragment2"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_basketFragment_to_shopsFragment2"
            app:destination="@id/shopsFragment" />
        <action
            android:id="@+id/action_basketFragment_to_categoryFragment2"
            app:destination="@id/categoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.clavis.FavouriteFragment.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.clavis.HistoryFragment.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.clavis.SettingsFragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.clavis.AboutFragment.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.clavis.CategoryFragment.CategoryFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_categoryFragment_to_shopsFragment"
            app:destination="@id/shopsFragment" />
    </fragment>
    <fragment
        android:id="@+id/shopsFragment"
        android:name="com.example.clavis.ShopsFragment.ShopsFragment"
        android:label="Заведения"
        tools:layout="@layout/fragment_shops">
        <action
            android:id="@+id/action_shopsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/propertyFragment"
        android:name="com.example.clavis.PropertyFragment.PropertyFragment"
        android:label="Недвижимость"
        tools:layout="@layout/fragment_property" />
    <fragment
        android:id="@+id/adsFragment"
        android:name="com.example.clavis.AddAdsFragment.AdsFragment"
        android:label="@string/ads"
        tools:layout="@layout/fragment_ads" />
    <fragment
        android:id="@+id/clavisCategoryFragment"
        android:name="com.example.clavis.ClavisCategory.ClavisCategoryFragment"
        android:label="Услуги Клавис"
        tools:layout="@layout/fragment_clavis_category" />
</navigation>